GG-35715 cherry-pick